<resources>
    <string name="app_name">Bingo Reveal Mobile</string>
    <string name="view_cards">View Cards</string>
    <string name="current_number">Current Number:</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter">Enter</string>
    <string name="title_activity_cardmanager">cardmanager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="_1">1</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="n">N</string>
    <string name="g">G</string>
    <string name="o">O</string>
    <string name="b1">B1</string>
    <string name="b3">B3</string>
    <string name="b4">B4</string>
    <string name="b5">B5</string>
    <string name="i1">I1</string>
    <string name="i2">I2</string>
    <string name="i3">I3</string>
    <string name="i4">I4</string>
    <string name="n1">N1</string>
    <string name="i5">I5</string>
    <string name="b2">B2</string>
    <string name="n2">N2</string>
    <string name="n4">N4</string>
    <string name="n5">N5</string>
    <string name="g1">G1</string>
    <string name="g2">G2</string>
    <string name="g3">G3</string>
    <string name="g4">G4</string>
    <string name="g5">G5</string>
    <string name="o1">O1</string>
    <string name="o3">O3</string>
    <string name="o4">O4</string>
    <string name="o5">O5</string>
    <string name="card_number">Card Number</string>
    <string name="__1">1</string>
    <string name="_save">SAVE</string>
    <string name="id_number">id_number</string>
    <string name="o2">O2</string>
    <string name="update">UPDATE</string>
    <string name="card">CARD #</string>
    <string name="card_name">Card Name:</string>
    <string name="card_name_2">Card Name</string>
    <string name="x">X</string>
    <string name="delete">DELETE</string>
    <string name="x_update">X</string>
    <string name="card_name_update">Card Name</string>
    <string name="enter_laro">ENTER</string>
    <string name="textview">TextView</string>
    <string name="enter_number_laro">Enter Number</string>
    <string name="_0">0</string>
    <string name="_0_2">0</string>
    <string name="_010" />
    <string name="_03" />
    <string name="_04" />
    <string name="_05" />
    <string name="_06" />
    <string name="_08" />
    <string name="_09" />
    <string name="_07" />
    <string name="_011">0</string>
    <string name="_012">0</string>
    <string name="_013">0</string>
    <string name="_014">0</string>
    <string name="_015">0</string>
    <string name="_016">0</string>
    <string name="_017">0</string>
    <string name="_018">0</string>
    <string name="_019">0</string>
    <string name="_020">0</string>
    <string name="_021">0</string>
    <string name="_022">0</string>
    <string name="_023">0</string>
    <string name="_024">0</string>


    <item name="auto_complete_textview" type="id" />
</resources>