<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/tbcardname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:ems="10"
        android:hint="@string/card_name_2"
        android:inputType="textFilter"

        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#293241"
        android:text="@string/_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.141" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/b1"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:labelFor="@+id/b1"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/i1"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n1"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/g1"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/o1"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/b2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/i2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/g2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/o2"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/b3"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/i3"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:text="@string/x"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/g3"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/o3"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/b4"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/i4"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n4"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/g4"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/o4"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/b5"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/i5"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n5"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/g5"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/o5"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/b"
        android:textAlignment="center"
        android:textColor="#293241"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/i"
        android:textAlignment="center"
        android:textColor="#293241"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/n"
        android:textAlignment="center"
        android:textColor="#293241"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/g"
        android:textAlignment="center"
        android:textColor="#293241"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/o"
        android:textAlignment="center"
        android:textColor="#293241"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>